--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/ElVent0/calculator.git"
   },
   "keywords": [],
-  "author": "Vasyl Tarasyuk <vasylviter95@gmail.comm>",
+  "author": "Vasyl Tarasyuk <vasylviter95@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ElVent0/calculator/issues"
